--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,130 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <!-- Poster/Release Date/Title/Rating -->
-            <LinearLayout
-                android:layout_width="match_parent"
+            <!-- Movie Poster -->
+            <ImageView
+                android:id="@+id/ivMoviePoster"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="0dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/ivMiddleDivider"
+                tools:src="@android:drawable/alert_dark_frame" />
 
-                <!-- Movie Poster -->
-                <ImageView
-                    android:id="@+id/ivMoviePoster"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter" />
+            <!-- Divider for the image -->
+            <ImageView
+                android:id="@+id/ivMiddleDivider"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/iv_divider_color"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0.501" />
 
-                <!-- Linear Layout setup for title/release date/rating -->
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
-                    <!-- Movie Title Section -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
+            <!-- Movie Title Section -->
+            <TextView
+                android:id="@+id/tvMovieTitleHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/movie_title_header"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/movie_title_header"
-                            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvMovieTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:maxLines="3"
+                app:layout_constraintLeft_toLeftOf="@+id/tvMovieTitleHeader"
+                app:layout_constraintRight_toRightOf="@+id/tvMovieTitleHeader"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleHeader"
+                tools:text="Check this out! Placeholder Text!" />
 
-                        <TextView
-                            android:id="@+id/tvMovieTitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:maxLines="3" />
-                    </LinearLayout>
 
-                    <!-- Release Date Section -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
+            <!-- Release Date Section -->
+            <TextView
+                android:id="@+id/tvMovieReleaseDateHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/movie_release_header"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.434"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/movie_release_header"
-                            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvMovieReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintLeft_toLeftOf="@+id/tvMovieReleaseDateHeader"
+                app:layout_constraintRight_toRightOf="@+id/tvMovieReleaseDateHeader"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDateHeader"
+                tools:text="Check this out! Placeholder Text!" />
 
-                        <TextView
-                            android:id="@+id/tvMovieRelease"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-                    </LinearLayout>
 
-                    <!-- Rating Bar Section -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
+            <!-- Rating Bar Section -->
+            <TextView
+                android:id="@+id/tvRatingBarHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="7dp"
+                android:text="@string/movie_rating_header"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/movie_rating_header"
-                            android:textStyle="bold" />
+            <RatingBar
+                android:id="@+id/rbRating"
+                style="@style/RatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:numStars="5"
+                android:stepSize="0.01"
+                app:layout_constraintLeft_toLeftOf="@+id/tvRatingBarHeader"
+                app:layout_constraintRight_toRightOf="@+id/tvRatingBarHeader"
+                app:layout_constraintTop_toBottomOf="@+id/tvRatingBarHeader" />
 
-                        <RatingBar
-                            android:id="@+id/tvMovieRating"
-                            style="@style/RatingBar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:numStars="5"
-                            android:stepSize="0.01" />
-                    </LinearLayout>
 
-                    <Button
-                        android:id="@+id/bFavoriteMovie"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="16dp"
-                        android:gravity="center" />
-                </LinearLayout>
-            </LinearLayout>
+            <!-- Favorite Movie Button Section -->
+            <Button
+                android:id="@+id/bFavoriteMovie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="0dp"
+                android:gravity="center"
+                app:layout_constraintLeft_toLeftOf="@+id/tvRatingBarHeader"
+                app:layout_constraintRight_toRightOf="@+id/tvRatingBarHeader"
+                app:layout_constraintTop_toBottomOf="@+id/rbRating"
+                android:layout_marginBottom="0dp"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintBottom_toTopOf="@+id/imageView4" />
+
 
             <!-- Divider for the movie plot -->
             <ImageView
-                android:layout_width="match_parent"
+                android:id="@+id/imageView4"
+                android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_marginLeft="8dp"
+                android:background="@color/iv_divider_color"
                 android:layout_marginRight="8dp"
-                android:background="@color/iv_divider_color" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
             <!-- Movie Synopsis -->
             <TextView
                 android:id="@+id/tvMoviePlot"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp" />
+                android:layout_width="368dp"
+                android:layout_height="0dp"
+                tools:text="Check this out! Placeholder Text!"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
