--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -16,15 +16,23 @@
             <!-- Movie Poster -->
             <ImageView
                 android:id="@+id/ivMoviePoster"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="0dp"
-                android:adjustViewBounds="true"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
+                android:cropToPadding="false"
                 android:scaleType="fitCenter"
+                app:layout_constraintBottom_toTopOf="@+id/ivSynopsisDivider"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/ivMiddleDivider"
-                tools:src="@android:drawable/alert_dark_frame" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:src="@android:drawable/alert_dark_frame"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" />
 
             <!-- Divider for the image -->
             <ImageView
@@ -35,10 +43,12 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/iv_divider_color"
+                app:layout_constraintBottom_toTopOf="@+id/ivSynopsisDivider"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.501" />
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
             <!-- Movie Title Section -->
@@ -48,26 +58,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/movie_title_header"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
             <TextView
                 android:id="@+id/tvMovieTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:maxLines="3"
-                app:layout_constraintLeft_toLeftOf="@+id/tvMovieTitleHeader"
-                app:layout_constraintRight_toRightOf="@+id/tvMovieTitleHeader"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleHeader"
-                tools:text="Check this out! Placeholder Text!" />
+                tools:text="Check this out! Placeholder Text!"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
             <!-- Release Date Section -->
@@ -76,26 +90,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/movie_release_header"
                 android:textStyle="bold"
-                app:layout_constraintHorizontal_bias="0.434"
                 app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
             <TextView
                 android:id="@+id/tvMovieReleaseDate"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintLeft_toLeftOf="@+id/tvMovieReleaseDateHeader"
-                app:layout_constraintRight_toRightOf="@+id/tvMovieReleaseDateHeader"
+                android:layout_marginTop="7dp"
+                android:gravity="center"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDateHeader"
-                tools:text="Check this out! Placeholder Text!" />
+                tools:text="Check this out! Placeholder Text!"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
             <!-- Rating Bar Section -->
@@ -105,26 +123,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/movie_rating_header"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
             <RatingBar
                 android:id="@+id/rbRating"
                 style="@style/RatingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:numStars="5"
                 android:stepSize="0.01"
-                app:layout_constraintLeft_toLeftOf="@+id/tvRatingBarHeader"
-                app:layout_constraintRight_toRightOf="@+id/tvRatingBarHeader"
-                app:layout_constraintTop_toBottomOf="@+id/tvRatingBarHeader" />
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvRatingBarHeader"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
             <!-- Favorite Movie Button Section -->
@@ -132,45 +154,83 @@
                 android:id="@+id/bFavoriteMovie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
                 android:gravity="center"
-                app:layout_constraintLeft_toLeftOf="@+id/tvRatingBarHeader"
-                app:layout_constraintRight_toRightOf="@+id/tvRatingBarHeader"
+                app:layout_constraintLeft_toRightOf="@+id/ivMiddleDivider"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rbRating"
-                android:layout_marginBottom="0dp"
-                app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintBottom_toTopOf="@+id/imageView4" />
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
 
             <!-- Divider for the movie plot -->
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/ivSynopsisDivider"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:background="@color/iv_divider_color"
-                android:layout_marginRight="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/iv_divider_color"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bFavoriteMovie"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
             <!-- Movie Synopsis -->
+
             <TextView
                 android:id="@+id/tvMoviePlot"
-                android:layout_width="368dp"
-                android:layout_height="0dp"
-                tools:text="Check this out! Placeholder Text!"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                android:layout_marginRight="8dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:maxLines="300"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                tools:text="t!older Text!older Text!older Text!older Text!older Text!older Text!older Text!older Text!oldert!older Text!older Text!older Text!older Text!older Text!older Text!older Text!older Text!oldert!older Text!older Text!older Text!older Text!older Text!older Text!older Text!older Text!older"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/ivSynopsisDivider"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp" />
+
+            <ImageView
+                android:id="@+id/ivTrailerDivider"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/iv_divider_color"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvMoviePlot"
+                app:layout_constraintVertical_bias="0.0"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <!-- Movie Trailers -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvMovieTrailers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="8dp"/>
+
+            <!-- Movie Reviews -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvMovieReviews"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="8dp"/>
+
+
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
